correct alignment for step title and dates

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -89,8 +89,9 @@ font-weight: bold;
 }
 
 #trip-title {
-  font-weight: 800;
-  font-size: 14px;
+  font-weight: 700;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.85);
 
 }
 
